@@ -75,6 +75,9 @@ e.g. <SPAN CLASS="META">&lt;PREFIX&gt;</SPAN> or <SPAN CLASS="META">&lt;URI as c
         automatically determine build-time and install-time (run-time)
         dependencies.  Currently, this is only supported for Oz sources
         by looking at <CODE CLASS="OZ">import</CODE> and <CODE CLASS="OZ">require</CODE> sections.
+  </DD><DT><CODE CLASS="SHELL">--(no)requires</CODE></DT><DD><SPAN CLASS="DEFAULT">default: </SPAN><CODE CLASS="SHELL">true</CODE></DD><DD>
+        automatically fetch and install other packages that the current one
+        requires.  This option is relevant both for building and for installing.
   </DD></DL><P>What you should remember here, is that <CODE CLASS="SHELL">-vn</CODE> is your friend.  Add
 <CODE CLASS="SHELL">-vn</CODE> at the end of any <SPAN CLASS="TOOL">ozmake</SPAN> invocation, and it will
 tell you in great detail what the command would do, without actually doing
